tests/compile_fail/resolver_duplicate_definition.stderr
error: Identifier "meters" defined multiple times.
  --> tests/compile_fail/resolver_duplicate_definition.rs:10:10
   |
10 |     unit meters: Length,
   |          ^^^^^^
11 |     unit meters: Length,
   |          ^^^^^^
